# arteficial-intellegence

./: .gitignore  AGENTS.md  Analysis.md  CMakeLists.txt  README.md  build_and_run.sh  code.py  codes.md  instruction.md  result.md
Report/: Phase-1.md
SPEC/: Phase-2.md  Phase-3.md
docs/v1/: architecture_validation_report.md  phase_1.md  phase_2.md
src/: bio_engine.cpp  bio_engine.h  constants.h  demo_meta_cognition.cpp  main.cpp  meta_cognition.cpp  meta_cognition.h  test_meta_cognition.cpp  types.h  utils.h
src/learning/: hippocampus.h
src/sensory/: cortex_layer.h  input_layer.h  spatial_utils.h  thalamus.h
tests/: memory_tests.cpp  physics_tests.cpp  sensory_tests.cpp  test_meta_cognition_v2.cpp
